# lattice

./: README.md  pyproject.toml
src/lattice/: __init__.py  agents.py  artifacts.py  cli.py  config.py  config_new.py  constants.py  contracts.py  errors.py  execution_modes.py  finalize.py  huddle.py  ids.py  knowledge.py  plan.py  provenance.py  providers.py  rag.py  router.py  router_llm.py  router_simplified.py  runlog.py  secrets.py  stage_gates.py  template_loader.py  transcript.py  web_api.py  worker.py
src/lattice/templates/backend/: .env  main.py  run.sh
src/lattice/templates/cli/: main.py
src/lattice/templates/frontend/: index.html  run.sh  script.js  styles.css
webui/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx
webui/src/api/: client.ts
webui/src/components/: AppShell.tsx  HotkeysProvider.tsx  Inspector.tsx  RunSidebar.tsx  RunView.tsx
webui/src/components/common/: MarkdownRenderer.tsx
webui/src/components/inspector/: ArtifactsPanel.tsx  DecisionsPanel.tsx  GatesPanel.tsx  HuddlesPanel.tsx  PlanGraphPanel.tsx  TestsPanel.tsx  WebSearchPanel.tsx
webui/src/components/views/: AgentTimeline.tsx  ChatMessage.tsx  ChatView.tsx  SwimlanesView.tsx  SystemEvent.tsx
webui/src/hooks/: useWebSocket.ts
webui/src/store/: index.ts
webui/src/types/: index.ts
webui/tests/: basic.spec.ts
