[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-cli"
version = "0.1.0"
description = "LATTICE Milestone 1: CLI worker runner with providers, artifacts, RAG, and logging"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28.0",
  "trafilatura>=1.6.0",
  "fastapi>=0.110.0",
  "starlette>=0.36.0",
  "PyYAML>=6.0.1",
]

[project.scripts]
lattice = "lattice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
